# data-pipeline-architecture-benchmark

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: batch_baseline.json
notebooks/: 01_phase1_baseline_batch.ipynb
scripts/: __init__.py  run_sprint1.py
src/pibic_sentiment/: __init__.py  cli.py  config.py  data.py  evaluation.py  experiment.py  modeling.py  pipeline.py  preprocessing.py  runner.py  sprint1.py
tests/: test_baseline.py
