[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pibic-sentiment-benchmark"
version = "0.1.0"
description = "Benchmark de pipelines batch e microbatch para classificacao de sentimentos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
run-batch-baseline = "pibic_sentiment.cli:main"
run-sprint1 = "pibic_sentiment.sprint1:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
